# CloseBot

./: .gitignore  Dockerfile  README.md  main.py  pyproject.toml
configurations/: config.py
skills/coder/: SKILL.md
src/app/api/dependecy/: deps.py
src/app/api/v1/: router.py
src/app/api/v1/routes/: receiveMessage.py
src/app/logs/: logs.py
src/app/mcpServers/: mcpConfig.py  mcpConfigServices.py
src/app/schemas/: healthCheckSchemas.py
src/app/services/: AgentServices.py  coPilotServices.py
tests/: test_api_logging.py  test_mcp_get_mcpservers.py
